--- a/pages/artists.html
+++ b/pages/artists.html
@@ -13,15 +13,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
-<section>
+
 <body>
-
-
+   <!--Banner-->
+<div class="text-center">
+  <img src="../assets/tattooimages/pexels-adrian-boustead-955938.jpg" alt="your-image-alt" class="img-fluid">
+  <div class="text-image">
+    <p><h1>Meet Our Team</h1></p>
+    <hr class="bardesign">
+  </div>
+</div>
 
    <!-- Navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-2 col-sm-12 col-md-12 col-lg-12">
     <div class="container">
-      <a href="../index.html" target="_blank"><img src="../assets/tattooimages/logo.png"class="object-fit-contain" alt="..."></a>
+      <a href="../index.html" target="_blank"
+            ><img
+              src="../assets/tattooimages/pintura-low-resolution-logo-white-on-transparent-background copy.png"
+          /></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -52,14 +61,6 @@
     </div>
   </nav>
 
-  <!--Banner-->
-<div class="text-center">
-  <img src="../assets/tattooimages/pexels-adrian-boustead-955938.jpg" alt="your-image-alt" class="img-fluid">
-  <div class="text-image">
-    <p><h1>Meet Our Team</h1></p>
-    <hr class="bardesign">
-  </div>
-</div>
 <!--Content-->
   <div class="container">
     <hr class="my-5">
