--- a/pages/services.html
+++ b/pages/services.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Services</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,64 +30,59 @@
       class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center"
     >
       <div class="content text-center">
-        <p class="text-warning">SERVICES</p>
+        <p class="text-warning">Services</p>
         <div class="text-shadow-pop-left">
           <hr class="bardesign" />
         </div>
       </div>
     </div>
-
     <!--Navbar-->
-    <header class="header">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
-        <div class="container">
-          <a href="../index.html" target="_blank"
-            ><img
-              src="../assets/tattooimages/pintura-low-resolution-logo-white-on-transparent-background copy.png"
-          /></a>
-          <button
-            type="button"
-            class="navbar-toggler"
-            data-bs-target="#navbarNav"
-            data-bs-toggle="collapse"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle Navbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="mx-auto"></div>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a href="appointment.html" class="nav-link text-warning"
-                  >Appointment</a
-                >
-              </li>
-              <li class="nav-item">
-                <a href="artists.html" class="nav-link text-warning">Artist</a>
-              </li>
-              <li class="nav-item">
-                <a href="services.html" class="nav-link text-warning"
-                  >Services</a
-                >
-              </li>
-              <li class="nav-item">
-                <a href="shop.html" class="nav-link text-warning">Shop</a>
-              </li>
-              <li class="nav-item">
-                <a href="privacy.html" class="nav-link text-warning"
-                  >Privacy Policy</a
-                >
-              </li>
-              <li class="nav-item">
-                <a href="about.html" class="nav-link text-warning">About</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
+      <div class="container">
+        <a href="../index.html" target="_blank"
+          ><img
+            src="../assets/tattooimages/pintura-low-resolution-logo-white-on-transparent-background copy.png"
+        /></a>
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-bs-target="#navbarNav"
+          data-bs-toggle="collapse"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle Navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="mx-auto"></div>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="appointment.html" class="nav-link text-warning"
+                >Appointment</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="artists.html" class="nav-link text-warning">Artist</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.html" class="nav-link text-warning">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="shop.html" class="nav-link text-warning">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a href="privacy.html" class="nav-link text-warning"
+                >Privacy Policy</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link text-warning">About</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
 
     <!--Card-->
     <div class="bg-d" class="col-md-6 col-lg-4 col-xl-4 mx-auto mt-3">
@@ -130,7 +124,7 @@
       <hr class="d-flex" style="color: antiquewhite" />
       <div class="clearfix">
         <img
-          src="../assets/tattooimages/removal.jpg"
+          src="../assets/tattooimages/services/pexels-cottonbro-studio-4125672.jpg"
           class="col-md-4 float-md-start mb-3 ms-md-3"
           alt="..."
         />
@@ -151,7 +145,7 @@
       <hr class="d-flex" style="color: antiquewhite" />
       <div class="clearfix">
         <img
-          src="../assets/tattooimages/microshading.jpg"
+          src="../assets/tattooimages/services/microshading.jpg"
           class="col-md-4 float-md-end mb-3 ms-md-3"
           alt="..."
         />
@@ -171,7 +165,7 @@
       <hr class="d-flex" style="color: antiquewhite" />
       <div class="clearfix">
         <img
-          src="../assets/tattooimages/scalp.jpg"
+          src="../assets/tattooimages/services/pexels-jonathan-nenemann-4952618.jpg"
           class="col-md-4 float-md-start mb-3 ms-md-3"
           alt="..."
         />
