--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -27,7 +27,10 @@
    <!-- Navbar-->
    <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-2 col-sm-12 col-md-12 col-lg-12">
     <div class="container">
-      <a href="../index.html" target="_blank"><img src="../assets/tattooimages/logo.png"class="object-fit-contain" alt="..."></a>
+      <a href="../index.html" target="_blank"
+            ><img
+              src="../assets/tattooimages/pintura-low-resolution-logo-white-on-transparent-background copy.png"
+          /></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
